--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/scout": "^10.14",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "yajra/laravel-datatables": "^12.0",
+        "yajra/laravel-datatables-buttons": "^12.0",
+        "yajra/laravel-datatables-html": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
